# faircamp_test

./: .gitignore  ALTERNATIVES.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CREDITS.md  Cargo.lock.license  Cargo.toml  README.md  build.rs  issue_template.md  issue_template.md.license
.github/: dependabot.yml
.github/workflow/: deploy-to-github-pages.yml
.github/workflows/: deploy-to-github-pages.yml
manual/: Cargo.toml  README.md  build.rs  index.md
manual/assets/: fira-mono-v14-latin_latin-ext-regular.woff2.license  styles.css  titillium-web-v15-latin_latin-ext-italic.woff2.license
manual/examples/: 01 Artist (Free Downloads).md  02 Artist (Soft Paycurtain).md  03 Artist (Download Codes).md  04 Label.md
manual/reference/: 01 Artists (artist.eno).md  02 Catalog (catalog.eno).md  03 Releases (release.eno).md  04 Tracks (track.eno).md
manual/src/: main.rs
manual/topics/: 01 Installation.md  02 Getting Started.md  03 Manifests.md  04 Linking to timecodes(U+002F)tracks.md  05 Command-line Arguments.md  06 Supported Formats.md  07 Concepts Explained.md  08 Going Online.md  09 Tags.md  10 FAQ.md
src/: archives.rs  args.rs  artist.rs  asset.rs  audio_format.rs  audio_meta.rs  build.rs  cache.rs  catalog.rs  cover_generator.rs  debug.rs  decode.rs  deploy.rs  download_format.rs  downloads.rs  fair_dir.rs  favicon.rs  feeds.rs  ffmpeg.rs  heuristic_audio_meta.rs  icons.rs  image.rs  link.rs  locale.rs  m3u.rs  main.rs  manifest.rs  markdown.rs  message.rs  opengraph.rs  permalink.rs  release.rs  render.rs  rsync.rs  scripts.rs  server.rs  site_metadata.rs  site_url.rs  source_file_signature.rs  streaming_quality.rs  (+7 more)
src/assets/: barlow-v12-latin-regular.woff2.license  browser.js  browser.js.license  clipboard.js.license  embeds.css.license  embeds.js.license  favicon_light.png.license  missing_image_descriptions.css  player.js  theming_widget.css  theming_widget.css.license  theming_widget.js.license
src/audio_meta/: aiff.rs  alac.rs  flac.rs  id3_util.rs  mp3.rs  ogg_vorbis.rs  opus.rs  wav.rs
src/decode/: aiff.rs  alac.rs  flac.rs  mp3.rs  ogg_vorbis.rs  opus.rs  wav.rs
src/feeds/: atom.rs  generic_rss.rs  media_rss.rs  podcast_rss.rs  rss.rs
src/image/: artist.rs  feed.rs  processor.rs  processor_image.rs  processor_libvips.rs  release.rs
src/manifest/: artist.rs  artist_catalog_release.rs  artist_catalog_release_track.rs  artist_release.rs  catalog.rs  catalog_release.rs  obsolete.rs  release.rs  release_track.rs  track.rs
src/render/: artist.rs  embed_layout.rs  image_descriptions.rs  index.rs  layout.rs  release.rs  release_download.rs  release_embed.rs  release_embed_codes.rs  release_purchase.rs  release_unlock.rs  subscribe.rs  track.rs  track_download.rs  track_embed.rs  track_embed_codes.rs  track_purchase.rs  track_unlock.rs
src/scripts/: browser.rs  clipboard.rs  embeds.rs  player.rs
src/theme/: dark.rs  light.rs
translations/: Cargo.toml
translations/assets/: scripts.js  styles.css
translations/src/: ca.rs  da.rs  de.rs  en.rs  es.rs  fi.rs  fr.rs  he.rs  it.rs  ja.rs  lib.rs  lt.rs  nb.rs  nl.rs  pl.rs  pt_pt.rs  ru.rs  sr_cyrl.rs  sr_latn.rs  sv.rs  tr.rs  uk.rs  zh_hans_cn.rs  zh_hant_tw.rs
