# SPDX-FileCopyrightText: 2021-2025 Simon Repp
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
authors = ["Simon Repp"]
edition = "2021"
name = "faircamp"
publish = false
# Applies with both --features libvips, and --features image currently, but might diverge again
rust-version = "1.82"
version = "1.6.0"

[build-dependencies]
base64 = "0.22.1"
lightningcss = { optional = true, version = "1.0.0-alpha.65" }
oxc_allocator = { optional = true, version = "0.62.0" }
oxc_codegen = { optional = true, version = "0.62.0" }
oxc_mangler = { optional = true, version = "0.62.0" }
oxc_minifier = { optional = true, version = "0.62.0" }
oxc_parser = { optional = true, version = "0.62.0" }
oxc_span = { optional = true, version = "0.62.0" }
oxc_transformer = { optional = true, version = "0.62.0" }

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
alac = "0.5.0"
base64 = "0.22.1"
# bincode 2.x is available but it includes breaking changes (on the API level,
# encoded data is "completely compatible if the same configuration is used")
# and raises the MSRV to 1.85.0 (!) therefore we'll wait a good bit until we
# update. By February 2026, Rust 1.85.0 will have been out about a year, this
# would about reflect our MSRV time distance at the time of writing
# (April 2025, where our MSRV for libvips builds is 1.76.0), so maybe around
# that time is a good future point for re-evaluating this.
bincode = "1.3.3"
chrono = { features = ["serde"], version = "0.4.41" }
clap = { features = ["derive"], version = "4.5.41" }
claxon = "0.4.3"
enolib = { git = "https://codeberg.org/simonrepp/enolib-rs", tag = "0.5.0" }
hound = "3.5.1"
id3 = "1.16.3"
image = { optional = true, version = "0.25.6" }
indoc = "2.0.6"
iso_currency = "0.5.3"
lewton = "0.10.2"
# We intentionally pin and keep libvips at an old version because
# newer versions significantly limit the range of systems on which
# we can build faircamp with libvips support (due to higher system
# libvips version requirements).
libvips = { optional = true, version = "=1.5.1" }
metaflac = "0.2.8"
mp4parse = "0.17.0"
nanoid = "0.4.0"
ogg = "0.9.2"
opus = "0.3.0"
opus_headers = "0.1.2"
# We intentionally pin and keep pacmog at an old version because
# newer versions significantly raise the minimum supported rust version.
pacmog = "=0.4.1"
pulldown-cmark = { default-features = false, features = ["html", "simd"], version = "0.13.0" }
rand = "0.9.2"
rand_chacha = "0.9.0"
rmp3 = { features = ["float", "simd"], version = "0.3.1" }
sanitize-filename = "0.6.0"
seahash = "4.1.0"
serde = "1.0.219"
serde_derive = "1.0.219"
slug = "0.1.6"
tiny-skia = "0.11.4"
tokio = { features = ["macros", "rt-multi-thread"], version = "1.46.1" }
translations = { path = "translations" }
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { features = ["v5"], version = "1.17.0" }
webbrowser = "1.0.5"
zip = { features = ["deflate"], version = "4.3.0" }

[features]
image = ["dep:image"]
libvips = ["dep:libvips"]
# Asset minification using the oxc crates has a high price as it raises
# the MSRV to 1.85.0, therefore we keep this an opt-in build feature right
# now.
minify = [
	"dep:lightningcss",
	"dep:oxc_allocator",
	"dep:oxc_codegen",
	"dep:oxc_mangler",
	"dep:oxc_minifier",
	"dep:oxc_parser",
	"dep:oxc_span",
	"dep:oxc_transformer"
]
